fix files cache serialization